--- a/FLAPPYBIRD/MainPage.xaml
+++ b/FLAPPYBIRD/MainPage.xaml
@@ -1,7 +1,63 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FLAPPYBIRD.MainPage">  
+             x:Class="FLAPPYBIRD.MainPage"
+             Shell.NavBarIsVisible="false">
+
     <Grid>
-        <Image Source=""
+
+        <Image Source="fundo.png"
+               Aspect="AspectFill"
+               HorizontalOptions="Fill"
+               VerticalOptions="Fill"/>
+
+        <Image Source="canocima.png"
+               x:Name="imgcanocima"
+               HeightRequest="300"
+               WidthRequest="100"
+               Aspect="AspectFit"
+               HorizontalOptions="End"
+               VerticalOptions="End"/>
+
+        <Image Source="canobaixo.png"
+               x:Name="imgcanobaixo"
+               HeightRequest="300"
+               WidthRequest="100"
+               Aspect="AspectFit"
+               HorizontalOptions="End"
+               VerticalOptions="Start"/>
+
+        <Image Source="lilghost.jpg"
+               x:Name="Passaro"
+               HeightRequest="90"
+               WidthRequest="70"
+               Margin="30,0,0,0"
+               HorizontalOptions="Start"
+               VerticalOptions="Center"/>
+
+        <Image Source="floor.png"
+               HeightRequest="90"
+               Aspect="AspectFill"
+               HorizontalOptions="Center"
+               VerticalOptions="End"/>
+
+        <Frame
+            IsVisible="true"
+            x:Name="FrameGameOver"
+            BackgroundColor="#99000000"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill"
+            CornerRadius="0">
+
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Oi"/>
+            </Frame.GestureRecognizers>
+            <Image Source= "inicio.png"
+             HeightRequest="195"
+            WidthRequest="160"/>
+
+        </Frame>
+
+    </Grid>
+
 </ContentPage>
